--- a/index-2.html
+++ b/index-2.html
@@ -1033,14 +1033,14 @@
 									<li><i class="fas fa-star"></i></li>
 									<li><i class="fas fa-star"></i></li>
 								</ul>
-								<p>Innovative, efficient, and collaborative digital agency service delivering exceptional results. Highly recommend for top-tier expertise and professionalism.</p>
+								<p>Exceptional digital agency! Expertise shines through creative solutions. Timely delivery, excellent communication, and impressive results. Highly recommend their services!</p>
 								<div class="vt-testimonial-author d-flex align-items-center">
 									<div class="item-img">
-										<img src="assets/img/about/test1.jpg" alt="">
+										<img src="assets/img/about/test2.jpg" alt="">
 									</div>
 									<div class="item-text">
-										<h3>Cameron Williamson</h3>
-										<span>Marketing Director</span>
+										<h3>Marvin McKinney</h3>
+										<span>Head of Products</span>
 									</div>
 								</div>
 							</div>
@@ -1054,14 +1054,14 @@
 									<li><i class="fas fa-star"></i></li>
 									<li><i class="fas fa-star"></i></li>
 								</ul>
-								<p>Innovative, efficient, and collaborative digital agency service delivering exceptional results. Highly recommend for top-tier expertise and professionalism.</p>
+								<p>Outstanding digital agency service! Exceptional creativity, strategic approach, and flawless execution. Highly recommend for all digital marketing needs.</p>
 								<div class="vt-testimonial-author d-flex align-items-center">
 									<div class="item-img">
-										<img src="assets/img/about/test1.jpg" alt="">
+										<img src="assets/img/about/test3.jpg" alt="">
 									</div>
 									<div class="item-text">
-										<h3>Cameron Williamson</h3>
-										<span>Marketing Director</span>
+										<h3>Albert Flores</h3>
+										<span>General Manager</span>
 									</div>
 								</div>
 							</div>
