--- a/index-3.html
+++ b/index-3.html
@@ -1158,8 +1158,8 @@
 		<div class="container">
 			<div class="vt-contact-content d-flex">
 				<div class="vt-contact-text-wrap">
-					<div class="vt-section-title vt-text ver_2 headline pera-content">
-						<div class="subtitle wow fadeInUp"  data-wow-delay="300ms" data-wow-duration="1200ms">
+					<div class="vt-section-title headline pera-content vt-text">
+						<div class="subtitle wow fadeInRight"  data-wow-delay="400ms" data-wow-duration="1000ms">
 							Contact Us
 						</div>
 						<h2 class="section_title vt-title vt-title-ani">Get in Touch with Us Today</h2>
@@ -1250,7 +1250,7 @@
 							</div>
 							<button>Submit NOw</button>
 						</form>
-					</form>
+					</div>
 				</div>
 			</div>
 		</div>
