--- a/index-2.html
+++ b/index-2.html
@@ -538,7 +538,11 @@
 <!-- Start of Banner section
 	============================================= -->
 	<section id="vt-banner" class="vt-banner-section txt_item_active item-view position-relative dark_version">
-		<div class="vt-vertical-shape txt_item_active"></div>
+		<div class="vt-vertical-shape-2 txt_item_active">
+			<span></span>
+			<span></span>
+			<span></span>
+		</div>
 		<div class="bt-banner-img position-absolute">
 			<img src="assets/img/bg/hero-2.jpg" alt="">
 		</div>
@@ -560,7 +564,7 @@
 
 <!-- Start of Service section
 	============================================= -->
-	<section id="vt-service-4" class="vt-service-section-4 pt-120 pb-120">
+	<section id="vt-service-4" class="vt-service-section-4 pt-115 pb-120">
 		<div class="vt-service-content-4">
 			<div class="container">
 				<div class="vt-service-top-content d-flex justify-content-between flex-wrap align-items-center">
@@ -654,7 +658,7 @@
 
 <!-- Start of Service section
 	============================================= -->
-	<section id="vt-service-5" class="vt-service-section-5 position-relative pt-120 pb-120">
+	<section id="vt-service-5" class="vt-service-section-5 position-relative pt-120 pb-165">
 		<div class="vt-service-pattern position-absolute">
 			<img src="assets/img/bg/pattern.png" alt="">
 		</div>
@@ -774,7 +778,7 @@
 
 <!-- Start of Service section
 	============================================= -->
-	<section id="vt-service-6" class="vt-service-section-6 pt-120 pb-120">
+	<section id="vt-service-6" class="vt-service-section-6 pt-115 pb-120">
 		<div class="container">
 			<div class="vt-section-title ver_2 headline pera-content">
 				<div class="subtitle wow fadeInRight"  data-wow-delay="400ms" data-wow-duration="1000ms">
@@ -907,7 +911,7 @@
 			</div>
 		</div>
 		<div class="vt-btn btn-spin mt-50 text-center">
-			<a href="#">Know About Us</a>
+			<a href="#">Free Consultation</a>
 		</div>
 	</section>
 <!-- Start of Service section
@@ -985,7 +989,7 @@
 
 <!-- Start of Testimonial section
 	============================================= -->
-	<section id="vt-testimonial-2" class="vt-testimonial-section-2 position-relative pt-120 pb-120">
+	<section id="vt-testimonial-2" class="vt-testimonial-section-2 position-relative pt-115 pb-120">
 		<div class="vt-service-pattern position-absolute">
 			<img src="assets/img/bg/pattern.png" alt="">
 		</div>
@@ -1077,7 +1081,7 @@
 
 <!-- Start of Blog section
 	============================================= -->
-	<section id="vt-blog-2" class="vt-blog-section-2 pt-120 pb-120">
+	<section id="vt-blog-2" class="vt-blog-section-2 pt-115 pb-120">
 		<div class="container">
 			<div class="vt-section-title ver_2 headline pera-content">
 				<div class="subtitle">
@@ -1148,7 +1152,7 @@
 
 <!-- Start of Faq  section
 	============================================= -->
-	<section id="vt-faq" class="vt-faq-section pt-120 pb-120 position-relative">
+	<section id="vt-faq" class="vt-faq-section pt-115 pb-120 position-relative">
 		<div class="container">
 			<div class="vt-section-title ver_2 headline text-center pera-content">
 				<div class="subtitle wow fadeInRight"  data-wow-delay="300ms" data-wow-duration="1200ms">
