--- a/index-3.html
+++ b/index-3.html
@@ -576,7 +576,7 @@
 
 <!-- Start of Service section
 	============================================= -->
-	<section id="vt-service-7" class="vt-service-section-7 pt-120 pb-190">
+	<section id="vt-service-7" class="vt-service-section-7 pt-115 pb-190">
 		<div class="container">
 			<div class="vt-section-title ver_2 headline pera-content">
 				<div class="subtitle wow fadeInRight"  data-wow-delay="400ms" data-wow-duration="1000ms">
@@ -776,6 +776,11 @@
 	<section id="vt-about-2" class="vt-about-section-2 position-relative">
 		<div class="container">
 			<div class="vt-about-title headline">
+				<div class="vt-section-title ver_2 headline pera-content">
+					<div class="subtitle wow fadeInRight"  data-wow-delay="300ms" data-wow-duration="1200ms">
+						We're Vertexify Consulting
+					</div>
+				</div>
 				<h2 class="ab_title vt-title vt-title-ani">Transform Your Business with Expert Consulting for Sustainable Growth and Efficiency</h2>
 			</div>
 			<div class="vt-about-top-content d-flex flex-wrap justify-content-between">
@@ -862,7 +867,7 @@
 
 <!-- Start of Get In Touch section
 	============================================= -->
-	<section id="vt-get-in-touch-2" class="vt-get-in-touch-section-2 appear_top section_border_radius pt-165 pb-120 position-relative">
+	<section id="vt-get-in-touch-2" class="vt-get-in-touch-section-2 appear_top section_border_radius pt-160 pb-120 position-relative">
 		<div class="vt-get-in-touch-bg position-absolute">
 			<div class="item-bg img-parallax">
 				<img src="assets/img/about/get-in.jpg" alt="">
@@ -889,7 +894,7 @@
 
 <!-- Start of Testimonial section
 	============================================= -->
-	<section id="vt-testimonial-2" class="vt-testimonial-section-2 section_border_radius position-relative pt-120 pb-120">
+	<section id="vt-testimonial-2" class="vt-testimonial-section-2 section_border_radius position-relative pt-115 pb-120">
 		<div class="vt-service-pattern position-absolute">
 			<img src="assets/img/bg/pattern.png" alt="">
 		</div>
@@ -981,7 +986,7 @@
 
 <!-- Start of Blog section
 	============================================= -->
-	<section id="vt-blog-2" class="vt-blog-section-2 section_border_radius pt-120 pb-120">
+	<section id="vt-blog-2" class="vt-blog-section-2 section_border_radius pt-130 pb-120">
 		<div class="container">
 			<div class="vt-section-title ver_2 headline pera-content">
 				<div class="subtitle wow fadeInUp"  data-wow-delay="500ms" data-wow-duration="1000ms">
@@ -1158,7 +1163,7 @@
 		<div class="container">
 			<div class="vt-contact-content d-flex">
 				<div class="vt-contact-text-wrap">
-					<div class="vt-section-title headline pera-content vt-text">
+					<div class="vt-section-title ver_2 headline pera-content vt-text">
 						<div class="subtitle wow fadeInRight"  data-wow-delay="400ms" data-wow-duration="1000ms">
 							Contact Us
 						</div>
