--- a/faq.html
+++ b/faq.html
@@ -2,7 +2,7 @@
   <html lang="en">
   <head>
   	<meta charset="UTF-8">
-  	<title>About Career</title>
+  	<title>About FAQs</title>
   	<meta name="description" content="Vertexify. - Business Consulting WordPress Theme">
   	<meta name="keywords" content="accountant, advertising, adviser, business, company, consultant, consulting, corporate, finance, financial advisor, human resources, insurance, legal, marketing, multipurpose">
   	<meta name="author" content="Themexriver">
@@ -535,7 +535,7 @@
 
 <!-- Start of Breadcrumb  section
 	============================================= -->
-	<section id="vt-breadcrumb" class="vt-breadcrumb-section position-relative" data-background="assets/img/bg/about-bread-2.jpg">
+	<section id="vt-breadcrumb" class="vt-breadcrumb-section position-relative" data-background="assets/img/bg/faq-bread.jpg">
 		<div class="vt-vertical-shape-2 txt_item_active">
 			<span></span>
 			<span></span>
@@ -546,12 +546,12 @@
 				<ul>
 					<li><a href="#">Home</a></li>
 					<li><a href="#">About</a></li>
-					<li>Careers</li>
+					<li>FAQs</li>
 				</ul>
-				<h2 class="breadcrumb_title">Join Our Team: Exciting Career Opportunities</h2>
-				<p>Join our dynamic team and advance your career with exciting opportunities for growth and innovation.</p>
+				<h2 class="breadcrumb_title">Frequently Asked Questions About Our Corporate Business</h2>
+				<p>Find answers to frequently asked questions about our services, expertise, and business solutions.</p>
 				<div class="vt-btn mt-30 btn-spin">
-					<a href="#">View Openings</a>
+					<a href="#">Discover More</a>
 				</div>
 			</div>
 		</div>
@@ -559,227 +559,74 @@
 <!-- End of Breadcrumb  section
 	============================================= -->
 
-<!-- Start of About Career  section
+<!-- Start of Faq Feed  section
 	============================================= -->
-	<section id="vt-about-career" class="vt-about-career-section pt-110">
+	<section id="vt-faq-feed" class="vt-faq-feed-section pt-115">
 		<div class="container">
-			<div class="vt-about-career-content">
-				<div class="vt-section-title ver_2 vt-text headline pera-content">
-					<div class="subtitle wow fadeInRight"  data-wow-delay="400ms" data-wow-duration="1000ms">
-						We're Vertexify Consulting
-					</div>
-					<h2 class="section_title vt-title vt-title-ani">Explore career opportunities with us and join a team dedicated to growth and innovation.</h2>
-					<p>At Vertexify, we are committed to fostering a dynamic and inclusive work environment where talent thrives. We believe in nurturing our employees' growth through continuous learning and professional development. Our career opportunities span various fields, from strategic management to innovative technology solutions. By joining our team, you will be part of a company that values integrity, excellence, and collaboration.</p>
-
-					<p>We offer competitive compensation, comprehensive benefits, and a supportive culture that encourages work-life balance. If you're passionate about making a difference and advancing your career in a forward-thinking corporate setting, we invite you to explore opportunities with us.</p>
+			<div class="vt-section-title ver_2 headline pera-content">
+				<div class="subtitle wow fadeInRight"  data-wow-delay="400ms" data-wow-duration="1000ms">
+					Frequently Asked Questions
 				</div>
+				<h2 class="section_title vt-title vt-title-ani">Answers to Common Corporate Business Questions</h2>
 			</div>
-		</div>
-	</section>
-	<div class="vt-about-video-content pt-115">
-		<div class="vt-about-video position-relative">
-			<div class="video-img">
-				<img src="assets/img/bg/video-bg-2.jpg" alt="">
-			</div>
-			<div class="play-icon">
-				<a class="video_box" href="#"><i class="fas fa-play"></i></a>
-				<span class="video_btn_border border_wrap-1"></span>
-				<span class="video_btn_border border_wrap-2"></span>
-				<span class="video_btn_border border_wrap-3"></span> 
-			</div>
-			<div class="vt-vertical-shape-2 txt_item_active">
-				<span></span>
-				<span></span>
-				<span></span>
-			</div>
-		</div>
-	</div>	
-<!-- End of About Career  section
-	============================================= -->
-
-<!-- Start of About Mission Vission  section
-	============================================= -->
-	<section id="vt-about-mission-vission" class="vt-about-mission-vission-section pt-115">
-		<div class="container">
-			<div class="vt-about-mission-vission-content">
+			<div class="vt-faq-feed-content pt-65 headline pera-content">
 				<div class="row">
 					<div class="col-lg-6">
-						<div class="vt-about-mission-vission-item headline pera-content">
-							<h3>What we do?</h3>
-							<p>At Vertexify, we specialize in delivering comprehensive business solutions that drive growth and efficiency. Our services range from strategic consulting and financial planning to cutting-edge technology integration and market analysis. We work closely with clients to understand their unique challenges and tailor our solutions to meet their specific needs.</p>
-
-							<p>By leveraging industry expertise and innovative strategies, we help businesses streamline operations, enhance productivity, and achieve sustainable success. Our dedicated team is committed to providing exceptional service and fostering long-term partnerships. Whether you need guidance on corporate strategy or support with operational improvements, we are here to help you navigate the complexities of the business world and achieve your goals.</p>
+						<div class="vt-faq-feed-item-area">
+							<div class="vt-faq-feed-item">
+								<h3>What services does Vertexify offer?</h3>
+								<p>We offer a wide range of services, including strategic consulting, financial planning, market analysis, technology integration, and more. Our goal is to help businesses achieve sustainable growth.</p>
+							</div>
+							<div class="vt-faq-feed-item">
+								<h3>What industries do you specialize in?</h3>
+								<p>We serve a diverse range of industries, including technology, finance, healthcare, manufacturing, and retail. Our team has the experience and knowledge to address unique challenges in various sectors.</p>
+							</div>
+							<div class="vt-faq-feed-item">
+								<h3>What is your approach to corporate social responsibility?</h3>
+								<p>We are committed to ethical business practices, sustainability, and community engagement. We integrate social and environmental considerations into our business strategies.</p>
+							</div>
+							<div class="vt-faq-feed-item">
+								<h3>How can I request a consultation or service?</h3>
+								<p>You can contact us via our website, email, or phone to schedule a consultation. Our team will work with you to understand your needs and propose tailored solutions.</p>
+							</div>
 						</div>
 					</div>
 					<div class="col-lg-6">
-						<div class="vt-about-mission-vission-item ver_2 headline pera-content">
-							<h3>What we believe in</h3>
-							<p>At Vertexify, we believe in the power of integrity, innovation, and collaboration to drive business success. Our core values guide every decision and interaction, ensuring we build lasting relationships based on trust and respect. We are dedicated to fostering a culture of continuous improvement and learning, empowering our employees to reach their full potential.</p>
-
-							<p>Our commitment to sustainability and social responsibility reflects our belief in making a positive impact on the community and environment. By prioritizing excellence and embracing change, we strive to deliver exceptional value to our clients and stakeholders. We are passionate about creating a business environment where creativity and dedication lead to meaningful achievements and shared success.</p>
+						<div class="vt-faq-feed-item-area">
+							<div class="vt-faq-feed-item">
+								<h3>How can Vertexify help my business grow?</h3>
+								<p>We provide customized solutions tailored to your business's specific needs, leveraging industry expertise and innovative strategies to enhance operations, increase productivity, and drive growth.</p>
+							</div>
+							<div class="vt-faq-feed-item">
+								<h3>How do you ensure the quality of your services?</h3>
+								<p>Quality is a top priority for us. We follow industry best practices, employ experienced professionals, and continuously review and improve our processes to deliver exceptional results.</p>
+							</div>
+							<div class="vt-faq-feed-item">
+								<h3>What sets Vertexify apart from other corporate service providers?</h3>
+								<p>Our commitment to innovation, integrity, and excellence distinguishes us. We focus on building long-term relationships with our clients and delivering customized solutions that drive success.</p>
+							</div>
+							<div class="vt-faq-feed-item">
+								<h3>Do you offer training and development?</h3>
+								<p>Yes, we prioritize continuous learning and professional development. We offer training programs, workshops, and other resources to help our employees grow and excel in their careers.</p>
+							</div>
 						</div>
 					</div>
+				</div>
+				<div class="vt-btn ver_2 btn-spin text-center mt-60 ">
+					<a href="#">Load More Questions</a>
+				</div>
+			</div>
+			<div class="vt-faq-cta text-center headline mt-70">
+				<h3>Don't see your question? Jump in our Slack!</h3>
+				<div class="vt-btn btn-spin text-center mt-20">
+					<a href="#">Load More Questions</a>
 				</div>
 			</div>
 		</div>
-	</section>		
-<!-- Start of About Mission Vission  section
-	============================================= -->
-
-<!-- Start of About gallery section
-	============================================= -->
-	<section id="vt-about-gallery" class="vt-about-gallery-section ver_2 pt-40">
-		<div class="vt-testimonial-content appear_top mt-50 position-relative">
-			<div class="vt-testimonial-slider swiper-container">
-				<div class="swiper-wrapper">
-					<div class="swiper-slide">
-						<div class="about-gallery-img">
-							<img src="assets/img/about/about-gallery.jpg" alt="">
-						</div>
-					</div>
-					<div class="swiper-slide">
-						<div class="about-gallery-img">
-							<img src="assets/img/about/about-gallery.jpg" alt="">
-						</div>
-					</div>
-					<div class="swiper-slide">
-						<div class="about-gallery-img">
-							<img src="assets/img/about/about-gallery.jpg" alt="">
-						</div>
-					</div>
-					<div class="swiper-slide">
-						<div class="about-gallery-img">
-							<img src="assets/img/about/about-gallery.jpg" alt="">
-						</div>
-					</div>
-					<div class="swiper-slide">
-						<div class="about-gallery-img">
-							<img src="assets/img/about/about-gallery.jpg" alt="">
-						</div>
-					</div>
-					<div class="swiper-slide">
-						<div class="about-gallery-img">
-							<img src="assets/img/about/about-gallery.jpg" alt="">
-						</div>
-					</div>
-				</div>
-			</div>
-			<div class="vt-testi-pagination text-center mt-30"></div>
-			<div class="vt-testi-slider-nav  d-flex align-items-center justify-content-center">
-				<div class="vt-testi-prev ver_2 d-flex align-items-center justify-content-center"><i class="fal fa-chevron-left"></i></div>
-				<div class="vt-testi-next ver_2 d-flex align-items-center justify-content-center"><i class="fal fa-chevron-right"></i></div>
-			</div>
-		</div>
-	</section>
-<!-- End of About gallery section
-	============================================= -->
-
-<!-- Start of Current opening section
-	============================================= -->
-	<section id="vt-current-opening" class="vt-current-opening-section pb-115">
-		<div class="container">
-			<div class="vt-section-title ver_2 headline pera-content">
-				<div class="subtitle wow fadeInRight"  data-wow-delay="400ms" data-wow-duration="1000ms">
-					Work With Us
-				</div>
-				<h2 class="section_title vt-title vt-title-ani">Current Openings</h2>
-				<p>We have exciting job openings across departments. Join our team to drive innovation and growth. Apply now for impactful opportunities!</p>
-			</div>
-			<div class="vt-current-opening-wrap pt-50 d-flex justify-content-end">
-				<div class="vt-current-opening-content">
-					<div class="vt-current-opening-item position-relative headline pera-content">
-						<h3><a href="#">Business Development Specialist</a></h3>
-						<span>Europe, Remote</span>
-						<div class="item-arrow">
-							<a href="#"><i class="far fa-angle-right"></i></a>
-						</div>
-					</div>
-					<div class="vt-current-opening-item position-relative headline pera-content">
-						<h3><a href="#">LS Retail Specialist</a></h3>
-						<span>Europe, Remote</span>
-						<div class="item-arrow">
-							<a href="#"><i class="far fa-angle-right"></i></a>
-						</div>
-					</div>
-					<div class="vt-current-opening-item position-relative headline pera-content">
-						<h3><a href="#">Internships</a></h3>
-						<span>Europe, Remote</span>
-						<div class="item-arrow">
-							<a href="#"><i class="far fa-angle-right"></i></a>
-						</div>
-					</div>
-					<div class="vt-current-opening-item position-relative headline pera-content">
-						<h3><a href="#">Join our Team!</a></h3>
-						<span>Europe, Remote</span>
-						<div class="item-arrow">
-							<a href="#"><i class="far fa-angle-right"></i></a>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</section>				
-<!-- End of Current opening section
-	============================================= -->
-
-<!-- Start of Growth  section
-	============================================= -->
-	<section id="vt-growth" class="vt-growth-section pt-115 pb-120 position-relative" data-background="assets/img/bg/growth-bg.jpg">
-		<div class="container">
-			<div class="vt-section-title ver_2 headline pera-content">
-				<div class="subtitle wow fadeInRight"  data-wow-delay="400ms" data-wow-duration="1000ms">
-					We're Vertexify Consulting
-				</div>
-				<h2 class="section_title vt-title vt-title-ani">Transform Your Business with Expert Consulting for Sustainable Growth and Efficiency</h2>
-			</div>
-		</div>
-		<div class="vt-growth-content d-flex align-items-center mt-75">
-			<div class="vt-growth-img-wrap d-flex">
-				<div class="item-img-video position-relative">
-					<div class="inner-img">
-						<img src="assets/img/about/gr1.jpg" alt="">
-					</div>
-					<div class="play-icon">
-						<a class="video_box" href="#"><i class="fas fa-play"></i></a>
-						<span class="video_btn_border border_wrap-1"></span>
-						<span class="video_btn_border border_wrap-2"></span>
-						<span class="video_btn_border border_wrap-3"></span> 
-					</div>
-				</div>
-				<div class="item-img-video position-relative">
-					<div class="inner-img">
-						<img src="assets/img/about/gr2.jpg" alt="">
-					</div>
-				</div>
-			</div>
-			<div class="vt-growth-counter pera-content">
-				<div class="top-text">
-					<p>Our expert business consulting services drive sustainable growth, enhance operational efficiency, and provide strategic insights to help your company achieve long-term success and profitability.</p>
-				</div>
-				<div class="vt-about-counter txt_item_active position-relative active">
-					<div class="vt-counter-item headline pera-content d-flex align-items-end">
-						<h3><span class="counter">13</span><b>+</b></h3>
-						<p>Years of Experience</p>
-					</div>
-					<div class="vt-counter-item headline pera-content d-flex align-items-end">
-						<h3><span class="counter">12</span><b>+</b></h3>
-						<p>Projects Worldwide</p>
-					</div>
-					<div class="vt-counter-item headline pera-content d-flex align-items-end">
-						<h3><span class="counter">93</span><b>+</b></h3>
-						<p>Clients Worldwide</p>
-					</div>
-				</div>
-			</div>
-		</div>
-		<div class="vt-vertical-shape-2 txt_item_active">
-			<span></span>
-			<span></span>
-			<span></span>
-		</div>
-	</section>		
-<!-- End of Growth section
+	</section>	
+<!-- End of Faq Feed  section
 	============================================= -->	
+
 
 <!-- Start of Get in touch  section
 	============================================= -->
@@ -929,4 +776,4 @@
 	<script src="assets/js/script.js"></script>
 
 </body>
-</html> 	                                                                                                                                                                  	
+</html> 	                                                                                                                                                                      
