--- a/index-2.html
+++ b/index-2.html
@@ -616,7 +616,7 @@
 				<div class="top-text pera-content vt-text">
 					<p>Our expert business consulting services drive sustainable growth, enhance operational efficiency, and provide strategic insights to help your company achieve long-term success and profitability.</p>
 				</div>
-				<div class="vt-btn btn-spin mt-30 text-capitalize">
+				<div class="vt-btn btn-spin mt-30 ">
 					<a href="#">Know About Us</a>
 				</div>
 			</div>
